Fix broken layout

--- a/src/app/shared/layouts/grid/grid.component.css
+++ b/src/app/shared/layouts/grid/grid.component.css
@@ -1,7 +1,7 @@
 :host {
     height: 100%;
     display: grid;
-    grid-template-columns: repeat( auto-fill, minmax(400px, 1fr) );
+    grid-template-columns: repeat( auto-fill, minmax(360px, 1fr) );
     grid-template-rows: repeat(4, 400px);
     gap: var(--medium); 
     min-width: 100%;
